# opencode-log-viewer

./: .gitignore  AGENTS.md  README.md  pyproject.toml
src/opencode_viewer/: __init__.py  app.py  db.py
tests/: test_app.py  test_db.py
