[project]
name = "opencode-viewer"
version = "0.1.0"
description = "Panel dashboard for browsing opencode SQLite session data."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.0",
    "panel>=1.4.0",
]

[project.scripts]
opencode-viewer = "opencode_viewer.app:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

